projects/elements/src/icon/icon.css
:host {
  --color: var(--nve-sys-status-neutral-background);
  --width: var(--nve-ref-size-500);
  --height: var(--nve-ref-size-500);
  display: inline-flex;
}

[internal-host] {
  color: var(--color);
  width: var(--width);
  height: var(--height);
  place-self: center;
}

svg {
  width: var(--width);
  height: var(--height);
}

:host([variant='inherit']) {
  --color: currentColor;
}

:host([status='success']) {
  --color: var(--nve-sys-status-success-background);
}

:host([status='warning']) {
  --color: var(--nve-sys-status-warning-background);
}

:host([status='danger']) {
  --color: var(--nve-sys-status-danger-background);
}

:host([status='accent']) {
  --color: var(--nve-sys-status-accent-background);
}

